--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,5 +20,5 @@ jobs:
 
       - uses: matt-ball/newman-action@master
         with:
-          collection: ../tests/TestCollection.postman_collection.json
+          collection: ./tests/TestCollection.postman_collection.json
           envVar: '[{ "key": "access-token", "value": "http://localhost:3000" }]'
