--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,7 @@ on:
 
 # Required with 'Federal Credentials' to authenticate GitHub Actions with Azure Active Directory.
 permissions:
+  id-token: write # This is required for requesting the JWT
   contents: read
 
 jobs:
@@ -13,7 +14,17 @@ jobs:
     runs-on: ubuntu-latest
     environment: development
     steps:
+      - name: 'Az CLI login'
+        uses: azure/login@v1
+        with:
+          client-id: ${{ vars.AZURE_CLIENT_ID }}
+          tenant-id: ${{ vars.AZURE_TENANT_ID }}
+          allow-no-subscriptions: true
 
+      - name: 'Run az commands'
+        run: |
+          az account show
+          az group list
       # Checkout Source Code
       - uses: actions/checkout@main
 
