--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,9 +22,7 @@ jobs:
           allow-no-subscriptions: true
 
       - name: 'Run az commands'
-        run: |
-          az account show
-          az group list
+        run: az account get-access-token --resource=https://backend-app.i8cnl.onmicrosoft.com/.default --query accessToken --output tsv
       # Checkout Source Code
       - uses: actions/checkout@main
 
