--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: 'Run az commands'
         run: |          
-          echo "JWT=$((az account get-access-token --scope=https://backend-app.i8cnl.onmicrosoft.com/.default --query accessToken)| jq -r '.accessToken')" >> $GITHUB_OUTPUT
+          echo "JWT=$(az account get-access-token --scope=https://backend-app.i8cnl.onmicrosoft.com/.default --query accessToken --output tsv)" >> $GITHUB_OUTPUT
 
 
       - uses: matt-ball/newman-action@master
