--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       - name: 'Retrieve JWT for https://backend-app.i8cnl.onmicrosoft.com/.default'
         id: get-jwt
         run: |          
-          echo "JWT=($(az account get-access-token --scope=https://backend-app.i8cnl.onmicrosoft.com/.default --query accessToken --output tsv) | jq '.accessToken')" >> $GITHUB_OUTPUT
+          echo "JWT=($(az account get-access-token --scope=https://backend-app.i8cnl.onmicrosoft.com/.default --query accessToken --output json) | jq '.accessToken')" >> $GITHUB_OUTPUT
 
 
       - uses: matt-ball/newman-action@master
