--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       - name: 'Retrieve JWT for https://backend-app.i8cnl.onmicrosoft.com/.default'
         id: get-jwt
         run: |
-          accessToken=$(az account get-access-token --scope=https://backend-app.i8cnl.onmicrosoft.com/.default --query accessToken --output json)
+          accessToken=$(az account get-access-token --scope=https://backend-app.i8cnl.onmicrosoft.com/.default --query accessToken --output json | json accessToken)
           echo "JWT=${accessToken}" >> $GITHUB_OUTPUT
 
 
