--- a/.github/workflows/execute-tests.yml
+++ b/.github/workflows/execute-tests.yml
@@ -26,7 +26,7 @@ jobs:
       - name: 'Retrieve JWT for Api'
         id: get-jwt
         run: |
-          accessToken=$(az account get-access-token --scope=https://backend-app.i8cnl.onmicrosoft.com/.default --query accessToken --output tsv)
+          accessToken=$(az account get-access-token --scope=api://98a497ac-7807-4d74-90b4-3aa77c6efa0d/.default --query accessToken --output tsv)
           echo "JWT=${accessToken}" >> $GITHUB_OUTPUT
       
       - name: 'Execute Newman'
